--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         tools:context=".ui.home.HomeFragment">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/layout_user_information"
@@ -19,33 +20,35 @@
                 android:src="@drawable/ic_account_circle_white_24dp"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
-                tools:ignore="contentDescription" />
+                tools:ignore="contentDescription"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:id="@+id/imageView2" />
 
-        <LinearLayout
-                android:layout_width="match_parent"
+        <TextView
+                android:id="@+id/tv_user_name"
+                android:textColor="@color/putih"
+                android:textSize="22sp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_marginStart="8dp">
+                app:layout_constraintStart_toEndOf="@+id/imageView2"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
 
-            <TextView
-                    android:id="@+id/tv_user_name"
-                    android:text="Sholi"
-                    android:textColor="@color/putih"
-                    android:textSize="22sp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-
-            <TextView
-                    android:id="@+id/tv_member_type"
-                    android:text="Normal"
-                    android:textColor="@color/putih"
-                    android:textSize="16sp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
-        </LinearLayout>
+        <TextView
+                android:id="@+id/tv_member_type"
+                android:textColor="@color/putih"
+                android:textSize="16sp"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toEndOf="@+id/imageView2"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_user_name"
+                app:layout_constraintHorizontal_bias="1.0" />
 
 
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <LinearLayout
             android:layout_width="match_parent"
@@ -80,7 +83,7 @@
                         android:text="Booking"
                         android:textColor="@color/white"
                         android:layout_gravity="center_horizontal"
-                        android:textSize="@dimen/textCardSize"/>
+                        android:textSize="@dimen/textCardSize" />
 
             </LinearLayout>
 
@@ -111,7 +114,7 @@
                         android:text="Cart"
                         android:textColor="@color/white"
                         android:layout_gravity="center_horizontal"
-                        android:textSize="@dimen/textCardSize"/>
+                        android:textSize="@dimen/textCardSize" />
 
             </LinearLayout>
 
@@ -142,7 +145,7 @@
                         android:text="History"
                         android:textColor="@color/white"
                         android:layout_gravity="center_horizontal"
-                        android:textSize="@dimen/textCardSize"/>
+                        android:textSize="@dimen/textCardSize" />
 
             </LinearLayout>
 
@@ -173,7 +176,7 @@
                         android:text="Notification"
                         android:textColor="@color/white"
                         android:layout_gravity="center_horizontal"
-                        android:textSize="@dimen/textCardSize"/>
+                        android:textSize="@dimen/textCardSize" />
 
             </LinearLayout>
 
@@ -181,27 +184,148 @@
 
     </LinearLayout>
 
-    <LinearLayout
+    <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:background="@color/dark_grey">
+            android:layout_height="wrap_content">
 
-        <ss.com.bannerslider.Slider
-                android:id="@+id/banner_slider_home"
+        <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:background="@color/dark_grey">
 
-        <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_lookbook"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:orientation="horizontal"
-                tools:listitem="@layout/item_lookbook">
+            <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/layout_booking_info"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:padding="5dp"
+                    android:visibility="gone"
+                    android:background="@color/white">
 
-        </androidx.recyclerview.widget.RecyclerView>
+                <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="10dp"
+                        android:src="@drawable/ic_baseline_calendar"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        android:id="@+id/iv_icon_calendar" />
 
-    </LinearLayout>
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/label_booking_info"
+                        android:layout_marginHorizontal="10dp"
+                        android:layout_marginVertical="5dp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="@+id/iv_icon_calendar"
+                        app:layout_constraintStart_toEndOf="@+id/iv_icon_calendar"
+                        app:layout_constraintHorizontal_bias="0"
+                        android:id="@+id/textView" />
+
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/label_garage"
+                        android:layout_marginHorizontal="10dp"
+                        android:layout_marginVertical="10dp"
+                        app:layout_constraintTop_toBottomOf="@+id/textView"
+                        app:layout_constraintStart_toEndOf="@+id/iv_icon_calendar"
+                        android:id="@+id/lb_garage_booking_info" />
+
+
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/dark_grey"
+                        android:layout_marginVertical="10dp"
+                        app:layout_constraintTop_toBottomOf="@+id/textView"
+                        android:id="@+id/tv_garage_booking_info"
+                        app:layout_constraintStart_toStartOf="@+id/tv_address_booking_info"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0" />
+
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/label_address"
+                        android:layout_marginHorizontal="10dp"
+                        android:layout_marginVertical="10dp"
+                        app:layout_constraintTop_toBottomOf="@+id/tv_garage_booking_info"
+                        app:layout_constraintStart_toEndOf="@+id/iv_icon_calendar"
+                        android:id="@+id/lb_address_booking_info" />
+
+
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/dark_grey"
+                        android:layout_marginHorizontal="10dp"
+                        android:layout_marginVertical="10dp"
+                        app:layout_constraintTop_toBottomOf="@+id/tv_garage_booking_info"
+                        app:layout_constraintStart_toEndOf="@+id/lb_address_booking_info"
+                        android:id="@+id/tv_address_booking_info" />
+
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/label_time"
+                        android:layout_marginHorizontal="10dp"
+                        android:layout_marginVertical="5dp"
+                        app:layout_constraintTop_toBottomOf="@+id/tv_address_booking_info"
+                        app:layout_constraintStart_toEndOf="@+id/iv_icon_calendar"
+                        android:id="@+id/lb_time_booking_info" />
+
+
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/dark_grey"
+                        android:layout_marginVertical="5dp"
+                        app:layout_constraintTop_toBottomOf="@+id/tv_address_booking_info"
+                        android:id="@+id/tv_time_booking_info"
+                        app:layout_constraintStart_toStartOf="@+id/tv_address_booking_info" />
+
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/label_package"
+                        android:layout_marginVertical="5dp"
+                        android:layout_marginHorizontal="10dp"
+                        app:layout_constraintTop_toBottomOf="@+id/tv_time_booking_info"
+                        app:layout_constraintStart_toEndOf="@+id/iv_icon_calendar"
+                        android:id="@+id/lb_package_booking_info" />
+
+
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/dark_grey"
+                        android:layout_marginVertical="5dp"
+                        app:layout_constraintTop_toBottomOf="@+id/tv_time_booking_info"
+                        android:id="@+id/tv_package_booking_info"
+                        app:layout_constraintStart_toStartOf="@+id/tv_address_booking_info" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <ss.com.bannerslider.Slider
+                    android:id="@+id/banner_slider_home"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_lookbook"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:orientation="horizontal"
+                    tools:listitem="@layout/item_lookbook">
+
+            </androidx.recyclerview.widget.RecyclerView>
+
+        </LinearLayout>
+
+    </ScrollView>
 
 </LinearLayout>
