--- a/app/src/main/res/layout/fragment_verification.xml
+++ b/app/src/main/res/layout/fragment_verification.xml
@@ -85,7 +85,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/tv_counter_down"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginTop="10dp"
-                android:hint="Enter verification code "
+                android:hint="@string/enter_verif_code"
                 android:imeActionId="6"
                 android:imeActionLabel="Send"
                 android:imeOptions="actionUnspecified"
